client/res/css/desktop.css
:root {
	--dark-window-bg: hsla(220, 5%, 10%, 0.8);
}

html {
	width: 100%;
	height: 100%;
	background-image: url('/res/favicon.png');
	background-color: #39F;
	background-size: 64px 64px;
}

body {
	position: relative;
	width: 100%;
	height: 100%;
}

#body {
	display: block;
	width: 100%;
	height: 100%;
}

/* Desktop and backplane */
#body .desktop {
	display: flex;
	flex-direction: column;
	position: relative;
	max-width: 100%;
	width: 100%;
	height: 100%;
	overflow: hidden;
	font: 14pt sans-serif;
	color: white;
	background-image: none;
	background-size: cover;
	background-position: center;
	overflow: hidden !important;
}

.desktop .dt-area {
	position: relative;
	flex-grow: 1;
	min-height: 0;
}

.desktop .backplane {
	display: flex;
	overflow: hidden;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	flex-direction: column;
	flex-wrap: wrap;
	align-content: flex-start;
	padding: .5rem;
}

.desktop .backplane .text {
	position: absolute;
	bottom: 0;
	right: 0;
	padding: 0 0.5em 0.5em 0;
	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
	text-align: right;
	font: 11pt 'Tahoma';
}

.desktop .backplane .app-icon {
	border: solid 1px transparent;
	width: 7rem;
	margin:  .2rem .2rem;
	padding: .4rem .1rem;
	text-align: center;
}

.desktop .backplane .app-icon:hover {
	border: solid 1px #68F;
	background-color: rgba(40, 40, 255, 0.1);
}

.app-icon label {
	display: block;
	font-size: 12pt;
	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
}

.app-icon img {
	width: 4rem;
}

/* Taskbar */ 
.desktop .taskbar {
	display: flex;
	flex: 0 0 auto;
	width: 100%;
	height: 32px;
	background: linear-gradient(to bottom, #333, #222);
}

.desktop .taskbar .tasks {
	display: flex;
	justify-content: flex-start;
	flex-grow: 1;
	overflow: hidden;
}

.taskbar .tasks div {
	display: flex;
	align-items: center;
	height: 100%;
	margin: 0;
	font: 11pt 'Tahoma';
	overflow: hidden;
}

.taskbar .tasks img {
	width: 46px;
	min-width: 32px;
	height: 100%;
	margin: 2px 0px 2px 6px;
	vertical-align: middle;
	object-fit: contain;
}

.taskbar .tasks span {
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
}

.taskbar .fullscreen-btn {
	width: 36px;
	background-color: transparent;
	background-image: url('/res/img/icons/fullscreen.png');
	background-size: 26px;
	flex-shrink: 0;
}

.taskbar .apps-btn {
	width: 36px;
	background-color: transparent;
	background-image: url('/res/img/icons/apps.png');
	background-size: 26px;
	flex-shrink: 0;
}


/* Windows */
.windows {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	pointer-events: none;
}

.window {
	--titlebar-height: 28px;
	--icon-size: 20px;
	pointer-events: auto;
	display: none; /* Windows start invisible */
	flex-direction: column;
	position: absolute;
	width: 1280px;
	height: 720px;
	overflow: hidden;
	box-shadow: 0px 0px 8px black;
}

.window.maximized {
	--titlebar-height: 22px;
	box-shadow: none;
}

.window.decorated:not(.maximized) {
	border: solid 1px darkgray;
}

.window.decorated.focused {
	border-color: #25E;
}

.window.visible {
	display: flex;
}

.window > .window-head {
	display: none;	
}

.window.decorated > .window-head {
	display: flex;
	flex-shrink: 0;
	height: var(--titlebar-height);
	background: hsla(220, 55%, 40%);
	white-space: nowrap;
}

.window.decorated.focused > .window-head {	
	background: linear-gradient(to right, hsla(220, 100%, 38%, 0.9), hsla(204, 100%, 45%, 0.8), hsla(320, 90%, 60%, 0.9));
}

.window.decorated > .window-head button {
	width: 32px;
	height: 100%;
	flex-shrink: 0;
	background-color: transparent;
	background-image: var(--icon);
	background-size: var(--icon-size);
	border: none;
	color: white;
}

.window.decorated > .window-head button:hover {
	background-color: rgba(0, 0, 0, 0.2);
}

.window.decorated > .window-head .window-title-box {
	display: flex;
	overflow: hidden;
	flex-grow: 1;
	flex-shrink: 1;
	padding-left: 2px;
}

.window.decorated > .window-head .window-title {
	margin: auto 0;
	overflow: hidden;
	font-size: 11pt;
	text-overflow: ellipsis;
}

.window-body {
	overflow: hidden;
	flex-grow: 1;
	background: var(--dark-window-bg);
}

.options-btn {
	--icon: url("/res/img/icons/menu.png");
}

.minimize-btn {
	--icon: url("/res/img/icons/minimize.png");
}

.maxrestore-btn {
	--icon: url("/res/img/icons/maximize.png");
}

.window.maximized .maxrestore-btn {
	--icon: url("/res/img/icons/restore.png");
}

.close-btn {
	--icon: url("/res/img/icons/close.png");
}

/* Dialogs */
.error-dialog .window-body {
	padding: 1rem 0.4rem;
}
.error-dialog .window-body img {
	float: left;
	width: 64px;
	margin: 0.5rem 1rem 0 0;
}

.window.dialog .window-body {
	display: flex;
	flex-wrap: wrap;
	padding-top: 1rem;
}

.window.dialog .window-body span {
	display: flex;
	flex-wrap: wrap;
	padding-top: 1rem;
}

.window.dialog .window-body img {
	max-height: 64px;
	max-width: 64px;
	margin: 0.5rem 1rem 0 0;
}

.window.dialog .options {
	width: 100%;
	align-self: flex-end;
	text-align: right;
	background: rgba(20, 20, 20, 0.4);
}

.window.dialog .options .btn {
	margin: .2rem;
	font-size: 12pt;
}

/* Context menu */
.context-menu {
	display: none;
	position: absolute;
	z-index: 1000;
	border: solid 1px #4AF;
	padding: 2px 2px;
	font-size: 13pt;
	background: #202020;
	box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
}

.context-menu.visible {
	display: block;
}

.context-menu i {
	display: block;
	padding: 4px 2em 4px 1.25em;
	font-style: inherit;
}

.context-menu i:hover {
	background-color: #35D;
}

.context-menu i.check {
	padding-left: 0;
}

.context-menu i.check::before {
	width: 1.25em;
	content: '';
	display: inline-block;
	text-align: center;
}

.context-menu i.check.checked::before {
	content: '\2713';
}

.context-menu i.menu {
	padding-right: 0;
}

.context-menu i.menu::after {
	width: 2em;
	content: '>';
	display: inline-block;
	text-align: center;
	float: right;
}

.context-menu hr {
	margin: 4px 0;
}

/* General */
.button {
	border: none;
	background-color: rgba(255, 255, 255, 0.075);
	background-position: center;
	background-size: contain;
	background-repeat: no-repeat;
	background-clip: padding-box;
}

.window-body .button {
	margin: .15em;
	padding: .35em .5em;
	font: 13pt 'Tahoma';
	color: white;
}

.button:hover {
	background-color: rgba(255, 255, 255, 0.15);
}

.button:active {
	background-color: rgba(0, 0, 0, 0.2);
	outline: none;
}

.button:focus {
	outline: none;
}


.window-body .menu-bar {
	border: none;
	border-bottom: solid 1px rgb(127, 127, 127);
	font-size: 0;
}

.window-body .menu-button {
	margin: 0;
	padding: .1em 2em;
	border: none;
	font: 11pt 'Tahoma';
	background: none;
	color: white;
}

.menu-button:hover {
	background-color: rgba(255, 255, 255, 0.15);
}

.menu-button:active {
	background-color: rgba(0, 0, 0, 0.2);
	outline: none;
}

.field {
	width: 10em;
	min-width: 0;
	margin: .15em;
	padding: .1em .2em;
	border: none;
	border-bottom: ridge 2px #47F;
	font-size: 13pt;
	background-color: rgba(255, 255, 255, 0.05);
	color: white;	
}

.field:focus {
	outline: none;
	border-bottom-color: hsl(320, 70%, 60%);
}

.noselect {
	user-select: none;
	-ms-user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;	
}

.fullscreened {
	position: absolute;
	left: 0;
	top: 0;
	width: calc(100vw - 0.1px) !important;
	height: calc(100vh - 0.1px) !important;
	max-width: calc(100vw - 0.1px) !important;
	max-height: calc(100vh - 0.1px) !important;
	flex-shrink: 0;
	backdrop-filter: blur(2px);
}

.fscr-parent {
	overflow: initial !important;
	/*transform: none !important;*/
}



/* ----- */
.Slider {
	--thumb-size: 18px;

	position: relative;
	display: inline-block;
	width: 256px;
	height: 12px;
	padding: 3px;
	border-style: solid;
	border-width: 1px;
	border-color: #333;
	border-color: rgba(10, 10, 10, 0.5);
	font-size: 7px;
	box-sizing: border-box;
	user-select: none;
	background: white;
	background-clip: content-box;
}

.Slider .lower {
	position: absolute;
	display: block;
	height: 100%;
	width: 50%;
	padding: 3px;
	left: 0;
	top: 0;
	line-height: 0;
	box-sizing: border-box;
	user-select: none;
	background: #00B6FF;
	background-clip: content-box;
}
.Slider .thumb {
	position: absolute;
	display: block;
	top: calc(50% - var(--thumb-size)/2);
	width: var(--thumb-size);
	height: var(--thumb-size);
	box-sizing: border-box;
	box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.75);
	border-style: solid;
	border-width: 1px;
	border-color: #000;
	border-color: rgba(0, 0, 0, 0);
	border-radius: 50%;
	user-select: none;
	background: white;
}
.Slider .thumb:hover {
	background: #00B6FF;
}
/*.Slider .Upper {
	position: absolute;
	right: 0;
	top: 0;
	bottom: 0;
	left: 50%;
	background: white;
}*/

.hidden_ {
	display: none !important; 
}

